tests/testWorkflows/invalid_workflows/invalidAppWorkflow.playbook
{
    "name": "invalidAppWorkflow",
    "workflows": [
        {
            "name": "multiactionWorkflow",
            "next_steps": [
                {
                    "conditions": [
                        {
                            "action": "regMatch",
                            "args": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action": "length",
                                    "args": []
                                }
                            ]
                        }
                    ],
                    "dst": "1",
                    "src": "2",
                    "status": "Success"
                }
            ],
            "start": "start",
            "steps": [
                {
                    "action": "helloWorld",
                    "app": "HelloWorld",
                    "inputs": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "name": "1",
                    "position": {},
                    "risk": 0,
                    "uid": "1",
                    "widgets": []
                },
                {
                    "action": "helloWorld",
                    "app": "Invalid",
                    "device": "hwTest",
                    "inputs": [],
                    "name": "start",
                    "position": {},
                    "risk": 0,
                    "uid": "2",
                    "widgets": []
                }
            ]
        }
    ]
}